fix: z-index

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,10 +3,6 @@ body {
   font-family: "PT Sans", sans-serif;
 }
 
-github-corner {
-  z-index: 100;
-}
-
 #particles-js canvas {
   display: block;
   -webkit-transform: scale(1);
